--- a/game.html
+++ b/game.html
@@ -55,8 +55,8 @@
                 opacity: 100%;
             }
         </style>
-        <!-- <script src="https://cdn.jsdelivr.net/npm/@croquet/croquet@1.0.5"></script> -->
-        <script src="./croquet.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@croquet/croquet@1.1.0-30"></script>
+        <!-- <script src="./croquet.min.js"></script> -->
         <script type="module">
             import emoji_regex from "https://cdn.jsdelivr.net/npm/emoji-regex/index.mjs";
             window.EMOJI_REGEX = emoji_regex();
@@ -754,7 +754,8 @@ class LobbyRelayView extends Croquet.View {
     }
 
     handleEvent(event) {
-        console.log("relay", this.viewId, "got", event);
+        if (event.type !== "message") return;
+        console.log("relay", this.viewId, "got", event.data);
     }
 }
 
